# dxc-ws

./: .clang-format  .gitignore  .mcp.json  CLAUDE.MD  CMakeLists.txt  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: board-test-writer.md  cpp-reviewer.md
.claude/hooks/: format-cpp.sh  run-tests.sh
.claude/skills/board-tests/: SKILL.md
.claude/workflows/: test-coverage-audit.js
docs/claude-code/: 01-skills.cs.md  01-skills.md  02-hooks.cs.md  02-hooks.md  03-mcp.cs.md  03-mcp.md  04-plugins.cs.md  04-plugins.md  05-agents.cs.md  05-agents.md  06-workflows.cs.md  06-workflows.md  README.cs.md  README.md  cheatsheet.cs.md  cheatsheet.md  exercises.cs.md  exercises.md
plugins/2048-dev/.claude-plugin/: plugin.json
plugins/2048-dev/agents/: game-explorer.md
plugins/2048-dev/commands/: build-test.md
plugins/2048-dev/skills/build-test/: SKILL.md
src/: board.cpp  board.hpp  game.cpp  game.hpp  input.cpp  input.hpp  main.cpp  renderer.cpp  renderer.hpp
tests/: CMakeLists.txt  test_board.cpp
